--- a/src/components/About.css
+++ b/src/components/About.css
@@ -1,5 +1,6 @@
 .about {
     background-color: #f8f8f8;
+    padding: 80px 0;
 }
 
 .about-container{
@@ -47,3 +48,32 @@
     z-index: 2; 
 
 } 
+
+@media(max-width: 768px){
+    .about-container {
+        flex-direction: column;
+        justify-content: space-around;
+        height: auto;
+        padding: 50px 0;
+        
+    }
+
+    .about #about_heading {
+        font-size: 2.5rem;
+        padding-top: 40px;
+    }
+
+    .about .about-img {
+        width: 300px;
+    }
+
+    .about .border-box {
+        width: 200px;
+        height: 300px;
+        margin: 10px;
+    }
+
+    .about .profile {
+        width: 200px;
+    }
+}
