--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,33 +1,133 @@
+/* Navbar.css */
 .navbar {
+    height: 100px;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 999;
+  }
+  
+  .navbar-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 30px;
-    height: 10vh;
-    position: fixed;
-    top: 0;
-    width: 96%;
-    z-index: 1;
-}
+    height: 100%;
+    padding: 0 2rem;
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+  
+  .navbar-logo {
+    width: 100px;
+  }
 
-.navbar-links {
-    font-size: 19px;
-    padding-right: 40px;
-}
-
-.navbar .navbar-links {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    gap: 45px;
-}
-
-.navbar .navbar-links, a {
-    color: inherit;
+  .navbar-logo a {
+    color: black;
+    font-size: 2.4rem;
+    /* font-weight: bold; */
     text-decoration: none;
+  }
+  
+  .nav-menu {
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .nav-item {
+    margin-left: 2rem;
+  }
+  
+  .nav-link {
+    color: black;
+    text-decoration: none;
+    font-size: 1.2rem;
+    transition: color 0.3s ease;
+  }
+  
+  .nav-link:hover {
+    color: #f8f8f8;
+  }
+  
+  /* Hamburger Menu */
+  .hamburger {
+    display: none;
+    cursor: pointer;
+  }
+  
+  .bar {
+    display: block;
+    width: 25px;
+    height: 3px;
+    margin: 5px auto;
+    background-color: black;
     transition: all 0.3s ease;
-}
-
-.navbar .navbar-logo{
-    font-size: 40px;
-}
+  }
+  
+  /* Mobile Menu */
+  .mobile-menu {
+    display: none;
+  }
+  
+  /* Media Queries */
+  @media screen and (max-width: 768px) {
+    .nav-menu {
+      display: none;
+    }
+    
+    .hamburger {
+      display: block;
+    }
+    
+    .bar.active.bar1 {
+      transform: translateY(8px) rotate(45deg);
+    }
+    
+    .bar.active.bar2 {
+      opacity: 0;
+    }
+    
+    .bar.active.bar3 {
+      transform: translateY(-8px) rotate(-45deg);
+    }
+    
+    .mobile-menu {
+      position: absolute;
+      top: 70px;
+      left: 0;
+      width: 100%;
+      background: #f8f8f8;
+      flex-direction: column;
+      transition: all 0.3s ease;
+      list-style: none;
+      padding: 0;
+      margin: 0;
+      display: flex;
+      max-height: 0;
+      overflow: hidden;
+    }
+    
+    .mobile-menu.active {
+      max-height: 300px;
+    }
+    
+    .mobile-item {
+      text-align: center;
+      padding: 1rem 0;
+    }
+    
+    .mobile-link {
+      color: black;
+      text-decoration: none;
+      font-size: 1.2rem;
+      transition: color 0.3s ease;
+      display: block;
+      padding: 0.5rem 0;
+    }
+    
+    .mobile-link:hover {
+      color: #fff;
+    }
+  }
